暑期更新开始了！
今天添加了一个好用的安卓端安装包签名工具apkcrack和电离大大的安卓版scpak

--- a/android_tutorial.html
+++ b/android_tutorial.html
@@ -34,7 +34,7 @@
 		<li class="parent"><span data-menuto="cont_2">二.详细步骤</span></li>
 			<li class="child"><span data-menuto="cont_2.1">1.apk编辑器篇</span></li>
 			<li class="child"><span data-menuto="cont_2.2">2.mt管理器篇</span></li>
-			<li class="child"><span data-menuto="cont_2.3">3.注：关于zipalign</span></li>
+			<li class="child"><span data-menuto="cont_2.3">3.以上工具无效</span></li>
 		<div class="divide_line"></div>
 
 		<li class="parent"><span data-menuto="cont_3">三.关于安卓核心破解</span></li>
@@ -46,7 +46,7 @@
 
 	<!--顶栏-->
 	<div id="big_title_div">Android基础教程</div>
-	<div id="last_update">——更新日期 2015年8月3日——</div>
+	<div id="last_update">——更新日期 2016年7月14日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
 	<div id="top_box_strutting"></div>
@@ -55,7 +55,7 @@
 	<div id="upper_box">
 		<h1>前言</h1>
 		<div class="content">
-			本教程由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E9%94%80%E9%94%8B%E9%95%9D%E9%93%B8&ie=utf-8" target="_blank">销锋镝铸</a>编写，第二节第三小节关于zipalign由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E7%9C%8B%E4%B8%B6%E5%B0%8F%E6%98%9F%E6%98%9F%E5%93%8E&ie=utf-8" target="_blank">看丶小星星哎</a>发现
+			本教程由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E9%94%80%E9%94%8B%E9%95%9D%E9%93%B8&ie=utf-8" target="_blank">销锋镝铸</a>编写，第二节第三小节关于zipalign的内容由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E7%9C%8B%E4%B8%B6%E5%B0%8F%E6%98%9F%E6%98%9F%E5%93%8E&ie=utf-8" target="_blank">看丶小星星哎</a>发现
 		</div>
 	</div>
 
@@ -135,9 +135,12 @@
 			</div>
 
 			<div class="section" id="cont_2.3">
-				<h2>3.注：关于zipalign</h2>
+				<h2>3.以上工具无效</h2>
 				<div class="content">
-				一些设备按照上述步骤制作完成安装包后，可能无法打开游戏，原因可能是上述工具不能对安装包进行zipalign操作，这里提供一个不一定有效的解决方法，如果此方法无效，请求助其他能够制作能够使用安装包的人帮忙制作安装包。
+				如果mt管理器和apk编辑器不能正常工作或做出的安装包不能使用时，可以尝试使用<a href="resources.html#cont_2">apkcrack</a>，操作和apk编辑器类似，但不能直接替换文件；建议使用mt管理器或apk编辑器完成对安装包的编辑后，用它进行签名。<br />
+				</div>
+				<div class="content">
+				如果仍然不行，原因可能是上述工具不能对安装包进行zipalign操作，这里提供一个不一定有效的解决方法，如果此方法无效，请求助其他能够制作能够使用安装包的人帮忙制作安装包。
 				</div>
 				<div class="content">
 					安装打开<a href="resources.html#cont_2">apktool 5.2</a>，点击安装包，点击zipalign优化，安装处理后的安装包
