--- a/content_folder_tutorial.html
+++ b/content_folder_tutorial.html
@@ -42,7 +42,7 @@
 	
 	<!--顶栏-->
 	<div id="big_title_div">Content解析</div>
-	<div id="last_update">——更新日期 2016年1月31日——</div>
+	<div id="last_update">——更新日期 2016年7月14日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
 	<div id="top_box_strutting"></div>
@@ -66,7 +66,7 @@
 			<div class="content">
 				<ul>
 					<li>在文件管理器中更改任意平台的游戏安装包的后缀为zip后解压，直接搜索Content.pak即可快速找到</li>
-					<li>windows系统使用<a href="resources.html#cont_4.9" target="_blank">SCPacker</a>、<a href="resources.html#cont_4.9" target="_blank">scpak</a>进行解包，安卓则使用<a href="resources.html#cont_2.6" target="_blank">pak处理器</a>（目前两者解包出来的文件不能交由对方打包），解包后会生成一个Content文件夹，按照对应的教程编辑其生成的文件夹中的文件后，使用之前解包的工具打包该文件夹，即可生成已经修改完成的Content.pak，这个时候一个“mod”就做出来了！</li>
+					<li>windows系统使用<a href="resources.html#cont_4.9" target="_blank">SCPacker</a>、<a href="resources.html#cont_4.9" target="_blank">scpak（Windows版）</a>进行解包，安卓则使用<a href="resources.html#cont_2.6" target="_blank">pak处理器</a>、<a href="resources.html#cont_2.6" target="_blank">scpak（安卓版）</a>（目前SCPacker、scpak、pak处理器三者解包出来的文件不能交由其他工具打包），解包后会生成一个Content文件夹，按照对应的教程编辑其生成的文件夹中的文件后，使用之前解包的工具打包该文件夹，即可生成已经修改完成的Content.pak，这个时候一个“mod”就做出来了！</li>
 					<li>要使用这个mod，还需要替换安装目录或安装包中的Content.pak为新打包的Content.pak</li>
 					<li>附SCPacker使用方法：解包：将Content.pak拖动到SCPacker.exe文件上方即可开始解包；打包：和解包一样，不过拖动的对象是你要打包的文件夹</li>
 				</ul>
