--- a/resources.html
+++ b/resources.html
@@ -46,7 +46,7 @@
 	
 	<!--顶栏-->
 	<div id="big_title_div">资源下载整合</div>
-	<div id="last_update">——更新日期 2016年1月31日——</div>
+	<div id="last_update">——更新日期 2016年7月14日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
 	<div id="top_box_strutting"></div>
@@ -96,6 +96,10 @@
 				<div class="content">
 					<a name="a_apk" href="http://www.coolapk.com/apk/cn.luomao.apkeditor" target="_blank">apk编辑器</a><br />
 					单个单个文件替换，无需另外签名
+				</div>
+				<div class="content">
+					<a name="a_apkcrack" href="http://www.coolapk.com/apk/zhao.apkcrack" target="_blank">apkcrack</a><br />
+					当以上mt管理器和apk编辑器皆不能正常工作时，可尝试使用此软件
 				</div>
 				<div class="content">
 					<a href="http://www.coolapk.com/apk/com.estrongs.android.pop" target="_blank">ES文件管理器</a><br />
@@ -156,8 +160,12 @@
 			<div class="section" id="cont_2.6">
 				<h2>6.解包打包工具</h2>
 				<div class="content">
-					<a name="a_lucky_patcher" href="http://pan.baidu.com/share/link?shareid=1066340296&uk=2788149454" target="_blank">pak处理器</a><br />
+					<a name="pakchuliqi" href="http://pan.baidu.com/share/link?shareid=1066340296&uk=2788149454" target="_blank">pak处理器</a><br />
 					感谢百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E7%9E%84%E5%87%86%E5%9C%B0%E9%9B%B7&ie=utf-8" target="_blank">瞄准地雷</a>的开发和提供！（暂不能处理Content.pak中的图片为png格式）<br />
+				</div>
+				<div class="content">
+					<a name="scpak_android" href="http://pan.baidu.com/share/link?shareid=4266892585&uk=2788149454" target="_blank">scpak</a>（安卓版）<br />
+					由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E7%94%B5%E7%A6%BB%E7%9A%84Tesla&ie=utf-8" target="_blank">电离的Tesla</a> 开发的工具，为<a href="#cont_4.9">SCPacker</a>的第二代，可将Content/Fonts中的字库文件解开。注：解包后的图片为tga格式，另有<a href="#cont_4.9">Windows版</a><br />
 				</div>
 			</div>
 		</div>
@@ -323,8 +331,8 @@
 					第一代解包打包工具，感谢百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E7%94%B5%E7%A6%BB%E7%9A%84Tesla&ie=utf-8" target="_blank">电离的Tesla</a> 的开发和提供！注：解包后的图片为png格式
 				</div>
 				<div class="content">
-					<a href="http://pan.baidu.com/share/link?shareid=1759953273&uk=2788149454">scpak</a><br />
-					同样由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E7%94%B5%E7%A6%BB%E7%9A%84Tesla&ie=utf-8" target="_blank">电离的Tesla</a> 开发的工具，为SCPacker的第二代，可将Content/Fonts中的字库文件解开。注：解包后的图片为tga格式
+					<a href="http://pan.baidu.com/share/link?shareid=1759953273&uk=2788149454">scpak</a>（Windows版）<br />
+					同样由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E7%94%B5%E7%A6%BB%E7%9A%84Tesla&ie=utf-8" target="_blank">电离的Tesla</a> 开发的工具，为SCPacker的第二代，可将Content/Fonts中的字库文件解开。注：解包后的图片为tga格式，另有<a href="#cont_2.6">安卓版</a>
 				</div>
 			</div>
 		</div>
