--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<script>document.write("<script src='js/preload.js?" + ver + "'><" + "/script>");</script>
 	<script>
 		if (!isOnline && navigator.onLine){
-			document.write("<script src='http://survivalcraft.cn/smt/js/online_version.js?" + Math.random() +  "'><"+"/script>");
+			document.write("<script src='http://smt.survivalcraft.cn/js/online_version.js?" + Math.random() +  "'><"+"/script>");
 		}
 	</script>
 </head>
