Material Design按钮应用到全部页面

--- a/history.html
+++ b/history.html
@@ -33,8 +33,12 @@
 	</script>
 	<!--顶栏 按钮-->
 	<div id="buttons">
-		<img id="menu_btn" src="image/menu_btn.svg" />
-		<img id="nav_btn" src="image/nav_btn.svg" />
+		<div id='menu_btn' class='md_btn'>
+			<img src='image/menu_btn.svg' />
+		</div>
+		<div id='nav_btn' class='md_btn'>
+			<img src='image/nav_btn.svg' />
+		</div>
 	</div>
 
 	<!--目录-->
