--- a/rules.html
+++ b/rules.html
@@ -22,7 +22,9 @@
 	</script>
 	<!--顶栏 按钮-->
 	<div id="buttons">
-		<img id="nav_btn" src="image/nav_btn.svg" />
+		<div id='nav_btn' class='md_btn'>
+			<img src='image/nav_btn.svg' />
+		</div>
 	</div>
 
 	<!--导航-->
