小更新资源整合和成员名单
资源整合调整大小写和资源排序，更换apkcrack安卓版链接
成员新增歌里唱死的诗人

--- a/resources.html
+++ b/resources.html
@@ -94,15 +94,15 @@
 			<div class="section" id="cont_2.1">
 				<h2>1.文件管理</h2>
 				<div class="content">
-					<a name="a_mt" href="http://www.coolapk.com/apk/bin.mt" target="_blank">mt管理器</a><br />
+					<a name="a_mt" href="http://www.coolapk.com/apk/bin.mt" target="_blank">MT管理器</a><br />
 					可批量删除添加安装包内文件，需另外签名
 				</div>
 				<div class="content">
-					<a name="a_apk" href="http://www.coolapk.com/apk/cn.luomao.apkeditor" target="_blank">apk编辑器</a><br />
-					单个单个文件替换，无需另外签名
+					<a name="a_apk" href="http://www.coolapk.com/apk/cn.luomao.apkeditor" target="_blank">Apk编辑器</a><br />
+					单个单个文件替换，无需另外签名（可能在较高的安卓版本中无法使用）
 				</div>
 				<div class="content">
-					<a name="a_apkcrack" href="http://www.coolapk.com/apk/zhao.apkcrack" target="_blank">apkcrack</a><br />
+					<a name="a_apkcrack" href="http://www.coolapk.com/apk/zhao.apkcrack" target="_blank">ApkCrack</a><br />
 					当以上mt管理器和apk编辑器皆不能正常工作时，可尝试使用此软件
 				</div>
 				<div class="content">
@@ -118,13 +118,13 @@
 			<div class="section" id="cont_2.2">
 				<h2>2.文本编辑</h2>
 				<div class="content">
+					<a name="a_quickedit" href="http://www.coolapk.com/apk/com.rhmsoft.edit" target="_blank">QuickEdit</a>（推荐）
+				</div>
+				<div class="content">
 					<a name="a_920" href="http://www.coolapk.com/apk/com.jecelyin.editor" target="_blank">920文本编辑器</a>
 				</div>
 				<div class="content">
 					<a name="a_jota_plus" href="http://www.coolapk.com/apk/jp.sblo.pandora.jota.plus" target="_blank">jota+</a>
-				</div>
-				<div class="content">
-					<a name="a_jota_plus" href="http://www.coolapk.com/apk/com.rhmsoft.edit" target="_blank">QuickEdit</a>
 				</div>
 			</div>
 
@@ -168,7 +168,7 @@
 					感谢百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E7%9E%84%E5%87%86%E5%9C%B0%E9%9B%B7&ie=utf-8" target="_blank">瞄准地雷</a>的开发和提供！（暂不能处理Content.pak中的图片为png格式）<br />
 				</div>
 				<div class="content">
-					<a name="scpak_android" href="http://pan.baidu.com/share/link?shareid=4266892585&uk=2788149454" target="_blank">scpak</a>（安卓版）<br />
+					<a name="scpak_android" href="http://pan.baidu.com/share/link?shareid=1699394629&uk=2788149454" target="_blank">scpak</a>（安卓版）<br />
 					由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E7%94%B5%E7%A6%BB%E7%9A%84Tesla&ie=utf-8" target="_blank">电离的Tesla</a> 开发的工具，为<a href="#cont_4.9">SCPacker</a>的第二代，可将Content/Fonts中的字库文件解开。注：解包后的图片为tga格式，另有<a href="#cont_4.9">Windows版</a><br />
 				</div>
 			</div>
@@ -193,8 +193,8 @@
 				<h2>2.文本编辑</h2>
 				<div class="content">
 					Textastic<br />
-					<a href="pphelperns://soft?b=com.textasticapp.textastic-iphone&i=1308312" target="_blank">iphone版</a>
-					<a href="pphelperns://soft?b=com.textasticapp.textastic&i=537094" target="_blank">ipad版</a><br />
+					<a href="pphelperns://soft?b=com.textasticapp.textastic-iphone&i=1308312" target="_blank">iPhone版</a>
+					<a href="pphelperns://soft?b=com.textasticapp.textastic&i=537094" target="_blank">iPad版</a><br />
 					请在有PP助手的IOS设备上用浏览器打开
 				</div>
 			</div>
@@ -203,8 +203,8 @@
 				<h2>3.图像处理</h2>
 				<div class="content">
 					photoshop touch<br />
-					<a href="pphelperns://soft?b=com.adobe.pstouchphone&i=850145" target="_blank">iphone版</a>
-					<a href="pphelperns://soft?b=com.adobe.pstouch.ipad&i=504610" target="_blank">ipad版</a><br />
+					<a href="pphelperns://soft?b=com.adobe.pstouchphone&i=850145" target="_blank">iPhone版</a>
+					<a href="pphelperns://soft?b=com.adobe.pstouch.ipad&i=504610" target="_blank">iPad版</a><br />
 					请在有PP助手的IOS设备上用浏览器打开
 				</div>
 			</div>
@@ -232,9 +232,7 @@
 			<div class="section" id="cont_4.3">
 				<h2>3.图像处理</h2>
 				<div class="content">
-					Photoshop cc<br />
-					<a href="http://www.xdowns.com/soft/31/93/2013/soft_107049.html" target="_blank">精简版</a>(32位)
-					<a href="http://www.smzy.com/smzy/smzy100391.html" target="_blank">特别版</a>(64位)
+					<a href="http://www.52pojie.cn/thread-550208-1-1.html" target="_blank">Photoshop CC 2017</a>
 				</div>
 			</div>
 
@@ -286,6 +284,10 @@
 				<div class="content">
 					<a href="http://www.kaopu001.com" target="_blank">靠谱助手</a><br />
 					基于Bluestacks的一款多功能Android模拟器
+				</div>
+				<div class="content">
+					<a href="https://www.yeshen.com/" target="_blank">夜神安卓模拟器</a><br />
+					一款多功能Android模拟器
 				</div>
 			</div>
 
