--- a/members.html
+++ b/members.html
@@ -34,7 +34,7 @@
 	
 	<!--顶栏-->
 	<div id="big_title_div">SMT组员</div>
-	<div id="last_update">——更新日期 2016年2月18日——</div>
+	<div id="last_update">——更新日期 2016年12月22日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
 	<div id="top_box_strutting"></div>
@@ -192,6 +192,13 @@
 						<td>1999/3/16</td>
 						<td>活跃</td>
 						<td>恶魔岛屿mod</td>
+					</tr>
+					<tr>
+						<td>歌里唱死的诗人</td>
+						<td>组员</td>
+						<td>2016/8/17</td>
+						<td>活跃</td>
+						<td>噩梦版、混乱之治系列、猎驯时代系列</td>
 					</tr>
 				</table>
 			</div>
