--- a/members.html
+++ b/members.html
@@ -200,6 +200,13 @@
 						<td>活跃</td>
 						<td>噩梦版、混乱之治系列、猎驯时代系列</td>
 					</tr>
+					<tr>
+						<td>修改是种乐趣</td>
+						<td>组员</td>
+						<td>2016/12/24</td>
+						<td>活跃</td>
+						<td>暂无</td>
+					</tr>
 				</table>
 			</div>
 		</div>
