Windows基础教程升级+资源更新
rt

--- a/blocksdata_tutorial.html
+++ b/blocksdata_tutorial.html
@@ -47,7 +47,7 @@
 	<!--导航-->
 	<div id="nav" class="nav" data-open="3"></div>
 	<div id="nav_overlay"></div>
-	
+
 	<!--顶栏-->
 	<div id="big_title_div">Blocksdata教程</div>
 	<div id="last_update">——更新日期 2016年12月15日——</div>
@@ -369,7 +369,7 @@
 						<td>uint</td>
 						<td>Required Tool Level</td>
 						<td>需求工具等级</td>
-						<td>挖掘时需求的装备等级，钻石矿为4</td>
+						<td>挖掘时需求的装备等级，钻石矿为3</td>
 					</tr>
 					<tr>
 						<td>35</td>
@@ -486,7 +486,7 @@
 						<td>uint</td>
 						<td>Tool Level</td>
 						<td>工具等级</td>
-						<td>木头工具该属性为1，石头为2，铁为3，钻石为4</td>
+						<td>木头工具该属性为1，石头为2，铁、铜为3，钻石为4</td>
 					</tr>
 					<tr>
 						<td>52</td>
