添加dnSpy到资源整合
对了~上一次push的资源更新主要是更新scpak

--- a/resources.html
+++ b/resources.html
@@ -252,6 +252,10 @@
 					以C#、VB、IL语言查看dll、exe可执行文件，简单好用
 				</div>
 				<div class="content">
+					<a name="w_dnspy" href="https://github.com/0xd4d/dnSpy/releases">dnSpy</a><br />
+					和ilSpy类似，比ilSpy好看，但更慢，可直接以il方式编辑
+				</div>
+				<div class="content">
 					<a href="http://pan.baidu.com/share/link?shareid=1721790542&uk=2788149454">NETFX Tools</a><br />
 					内有ildasm.exe，可反编译exe、dll文件为il，亦有和ILSpy相同的以不同语言查看的功能<br />
 					此处提供的版本提取自C:\Program Files (x86)\Microsoft SDKs\Windows\v10.0A\bin\NETFX 4.6 Tools
