--- a/source_code_tutorial.html
+++ b/source_code_tutorial.html
@@ -46,11 +46,11 @@
 
 		<li class="parent"><span data-menuto="cont_5">五.编译</span></li>
 	</div>
-	
+
 	<!--导航-->
 	<div id="nav" class="nav" data-open="3"></div>
 	<div id="nav_overlay"></div>
-	
+
 	<!--顶栏-->
 	<div id="big_title_div">“源代码”教程</div>
 	<div id="last_update">——更新日期 2016年1月29日——</div>
@@ -76,10 +76,10 @@
 		<div class="chapter" id="cont_1">
 			<h1>第一节 所需工具</h1>
 			<div class="content">
-				一台Windows系统的设备，<a href="resources.html#cont_4.5">IL Spy</a>，<a href="resources.html#cont_4.5">ilasm</a>，<a href="resources.html#cont_4.5">idlasm</a>，任意文本编辑器
+				一台Windows系统的设备，<a href="resources.html#cont_4.5">IL Spy</a>（或<a href="resources.html#cont_4.5">其他源代码查看工具</a>），<a href="resources.html#cont_4.5">ilasm</a>，<a href="resources.html#cont_4.5">idlasm</a>，任意文本编辑器
 			</div>
 		</div>
-		
+
 		<div class="chapter" id="cont_2">
 			<h1>第二节 反编译</h1>
 			<div class="content">
@@ -102,7 +102,7 @@
 				接下来ildasm会自动完成反编译，接下来就可以用文本编辑器直接编辑了
 			</div>
 		</div>
-		
+
 		<div class="chapter" id="cont_3">
 			<h1>第三节 定位</h1>
 			<div class="content">
@@ -134,7 +134,7 @@
 				通过搜索-分析-对照三大“法宝”，基本都能准确地定位到需要修改的方法（Method）和大致的代码位置
 			</div>
 		</div>
-		
+
 		<div class="chapter" id="cont_4">
 			<h1>第四节 IL指令</h1>
 			<div class="content">
@@ -1054,7 +1054,7 @@
               </table>
 			</div>
 		</div>
-		
+
 		<div class="chapter" id="cont_5">
 			<h1>第五节 编译</h1>
 			<div class="content">
