--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 				宗旨：深入研究Survivalcraft，使游戏更加有趣，多样化
 			</div>
 			<div class="content">
-				本导航主要用于教授Survivalcraft Mod的制作方法，提供相关资源，以及介绍SMT组，欢迎任何人加入<a target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=ff7d30bde77e41883745af6608e898c34b5fd5509e3d63fb7a1aa97425709657">QQ群-SC MOD交流群(SMT)</a>（群号302758716）交流mod！<br />
+				本导航主要用于教授Survivalcraft Mod的制作方法，提供相关资源，以及介绍SMT组，欢迎感兴趣的人士加入<a target="_blank" href="http://shang.qq.com/wpa/qunwpa?idkey=ff7d30bde77e41883745af6608e898c34b5fd5509e3d63fb7a1aa97425709657">QQ群-SC MOD交流群(SMT)</a>（群号302758716）交流mod！<br />
 			</div>
 			<div class="content">
 				网站开发者：百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=lzm956902416&ie=utf-8" target="_blank">lzm956902416</a>
