幸运破解器链接修复

--- a/resources.html
+++ b/resources.html
@@ -156,7 +156,7 @@
 			<div class="section" id="cont_2.5">
 				<h2>5.其他推荐</h2>
 				<div class="content">
-					<a name="a_lucky_patcher" href="http://www.coolapk.com/apk/com.forpda.lp" target="_blank">幸运破解器</a><br />
+					<a name="a_lucky_patcher" href="http://www.coolapk.com/apk/com.android.vending.billing.InAppBillingService.LOCK" target="_blank">幸运破解器</a><br />
 					安卓核心破解后可无视安装包签名直接安装，需root，<a href="android_tutorial.html#cont_3">详情</a>
 				</div>
 			</div>
