标题缩放样式应用到全部页面

--- a/android_tutorial.html
+++ b/android_tutorial.html
@@ -49,7 +49,7 @@
 	<div id="nav_overlay"></div>
 
 	<!--顶栏-->
-	<div id="big_title_div">Android基础教程</div>
+	<div id="big_title_div" class="big">Android基础教程</div>
 	<div id="last_update">——更新日期 2016年7月14日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
