--- a/content_folder_tutorial.html
+++ b/content_folder_tutorial.html
@@ -45,7 +45,7 @@
 	<div id="nav_overlay"></div>
 
 	<!--顶栏-->
-	<div id="big_title_div">Content解析</div>
+	<div id="big_title_div" class="big">Content解析</div>
 	<div id="last_update">——更新日期 2017年2月20日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
