--- a/database_tutorial.html
+++ b/database_tutorial.html
@@ -51,7 +51,7 @@
 	<div id="nav_overlay"></div>
 	
 	<!--顶栏-->
-	<div id="big_title_div">Database解析</div>
+	<div id="big_title_div" class="big">Database解析</div>
 	<div id="last_update">——更新日期 2016年1月28日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
