--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 	<div id="nav_overlay"></div>
 
 	<!--顶栏-->
-	<div id="big_title_div">SMT导航</div>
+	<div id="big_title_div" class="big">SMT导航</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
 	<div id="top_box_strutting"></div>
