--- a/crafting_recipes_tutorial.html
+++ b/crafting_recipes_tutorial.html
@@ -47,7 +47,7 @@
 	<div id="nav_overlay"></div>
 	
 	<!--顶栏-->
-	<div id="big_title_div">CraftingRecipes解析</div>
+	<div id="big_title_div" class="big">CraftingRecipes解析</div>
 	<div id="last_update">——更新日期 2016年1月25日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
