--- a/history.html
+++ b/history.html
@@ -56,7 +56,7 @@
 	<div id="nav_overlay"></div>
 	
 	<!--顶栏-->
-	<div id="big_title_div">SMT历史</div>
+	<div id="big_title_div" class="big">SMT历史</div>
 	<div id="last_update">——更新日期 2015年8月7日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
