--- a/ios_tutorial.html
+++ b/ios_tutorial.html
@@ -48,7 +48,7 @@
 	<div id="nav_overlay"></div>
 	
 	<!--顶栏-->
-	<div id="big_title_div">IOS基础教程</div>
+	<div id="big_title_div" class="big">IOS基础教程</div>
 	<div id="last_update">——更新日期 2016年1月25日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
