--- a/members.html
+++ b/members.html
@@ -33,7 +33,7 @@
 	<div id="nav_overlay"></div>
 	
 	<!--顶栏-->
-	<div id="big_title_div">SMT组员</div>
+	<div id="big_title_div" class="big">SMT组员</div>
 	<div id="last_update">——更新日期 2016年12月22日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
