--- a/nav_update.html
+++ b/nav_update.html
@@ -37,7 +37,7 @@
 	<div id="nav_overlay"></div>
 
 	<!--顶栏-->
-	<div id="big_title_div">导航版本更新&amp;离线</div>
+	<div id="big_title_div" class="big">导航版本更新&amp;离线</div>
 	<div id="last_update">——更新日期 2017年2月27日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
