--- a/publication_example.html
+++ b/publication_example.html
@@ -32,7 +32,7 @@
 	<div id="nav_overlay"></div>
 	
 	<!--顶栏-->
-	<div id="big_title_div">发布范例</div>
+	<div id="big_title_div" class="big">发布范例</div>
 	<div id="last_update">——更新日期 2016年2月1日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
