--- a/source_code_tutorial.html
+++ b/source_code_tutorial.html
@@ -55,7 +55,7 @@
 	<div id="nav_overlay"></div>
 
 	<!--顶栏-->
-	<div id="big_title_div">“源代码”教程</div>
+	<div id="big_title_div" class="big">“源代码”教程</div>
 	<div id="last_update">——更新日期 2017年2月24日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
