--- a/windows_tutorial.html
+++ b/windows_tutorial.html
@@ -47,7 +47,7 @@
 	<div id="nav_overlay"></div>
 
 	<!--顶栏-->
-	<div id="big_title_div">Windows基础教程</div>
+	<div id="big_title_div" class="big">Windows基础教程</div>
 	<div id="last_update">——更新日期 2017年2月20日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
