--- a/xml_tutorial.html
+++ b/xml_tutorial.html
@@ -37,7 +37,7 @@
 	<div id="nav_overlay"></div>
 	
 	<!--顶栏-->
-	<div id="big_title_div">XML基础知识</div>
+	<div id="big_title_div" class="big">XML基础知识</div>
 	<div id="last_update">——更新日期 2016年1月28日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
