--- a/logo.html
+++ b/logo.html
@@ -45,10 +45,9 @@
 
 	<!--目录-->
 	<div id="menu">
-		<li class="parent"><span data-menuto="cont_1">一.现用logo</span></li>
-		<div class="divide_line"></div>
-		
-		<li class="parent"><span data-menuto="cont_2">二.曾用logo</span></li>
+		<li class="parent md_btn" data-menuto="cont_1">一.现用logo</span></li>
+				
+		<li class="parent md_btn" data-menuto="cont_2">二.曾用logo</span></li>
 	</div>
 
 	<!--导航-->
