--- a/blocksdata_tutorial.html
+++ b/blocksdata_tutorial.html
@@ -32,16 +32,13 @@
 
 	<!--目录-->
 	<div id="menu">
-		<li class="parent"><span data-menuto="cont_1">一.数据类型</span></li>
-		<div class="divide_line"></div>
-
-		<li class="parent"><span data-menuto="cont_2">二.内容详解</span></li>
-		<div class="divide_line"></div>
-
-		<li class="parent"><span data-menuto="cont_3">三.启发例子</span></li>
-		<div class="divide_line"></div>
-
-		<li class="parent"><span data-menuto="cont_appendix">附录</span></li>
+		<li class="parent md_btn" data-menuto="cont_1">一.数据类型</span></li>
+		
+		<li class="parent md_btn" data-menuto="cont_2">二.内容详解</span></li>
+		
+		<li class="parent md_btn" data-menuto="cont_3">三.启发例子</span></li>
+		
+		<li class="parent md_btn" data-menuto="cont_appendix">附录</span></li>
 	</div>
 
 	<!--导航-->
