--- a/content_folder_tutorial.html
+++ b/content_folder_tutorial.html
@@ -32,12 +32,11 @@
 
 	<!--目录-->
 	<div id="menu">
-		<li class="parent"><span data-menuto="cont_1">一.处理Content.pak</span></li>
-		<div class="divide_line"></div>
-
-		<li class="parent"><span data-menuto="cont_2">二.具体解析</span></li>
-			<li class="child"><span data-menuto="cont_2.1">1.根目录</span></li>
-			<li class="child"><span data-menuto="cont_2.2">2.文件夹</span></li>
+		<li class="parent md_btn" data-menuto="cont_1">一.处理Content.pak</span></li>
+		
+		<li class="parent md_btn" data-menuto="cont_2">二.具体解析</span></li>
+			<li class="child md_btn" data-menuto="cont_2.1">1.根目录</span></li>
+			<li class="child md_btn" data-menuto="cont_2.2">2.文件夹</span></li>
 	</div>
 
 	<!--导航-->
