--- a/crafting_recipes_tutorial.html
+++ b/crafting_recipes_tutorial.html
@@ -34,12 +34,11 @@
 
 	<!--目录-->
 	<div id="menu">
-		<li class="parent"><span data-menuto="cont_1">一.文件解析</span></li>
-		<div class="divide_line"></div>
-		
-		<li class="parent"><span data-menuto="cont_2">二.一些例子</span></li>
-			<li class="child"><span data-menuto="cont_2.1">1.例一</span></li>
-			<li class="child"><span data-menuto="cont_2.2">2.例二</span></li>
+		<li class="parent md_btn" data-menuto="cont_1">一.文件解析</span></li>
+				
+		<li class="parent md_btn" data-menuto="cont_2">二.一些例子</span></li>
+			<li class="child md_btn" data-menuto="cont_2.1">1.例一</span></li>
+			<li class="child md_btn" data-menuto="cont_2.2">2.例二</span></li>
 	</div>
 
 	<!--导航-->
