--- a/history.html
+++ b/history.html
@@ -43,13 +43,10 @@
 
 	<!--目录-->
 	<div id="menu">
-		<li class="parent"><span data-menuto="cont_1">2013年</span></li>
-		<div class="divide_line"></div>
-		<li class="parent"><span data-menuto="cont_2">2014年</span></li>
-		<div class="divide_line"></div>
-		<li class="parent"><span data-menuto="cont_3">2015年</span></li>
-		<div class="divide_line"></div>
-		<li><span id="reverse_chapter">倒序查看</span></li>
+		<li class="parent md_btn" data-menuto="cont_1">2013年</span></li>
+				<li class="parent md_btn" data-menuto="cont_2">2014年</span></li>
+				<li class="parent md_btn" data-menuto="cont_3">2015年</span></li>
+				<li><span id="reverse_chapter">倒序查看</span></li>
 	</div>
 	<!--导航-->
 	<div id="nav" class="nav" data-open="1"></div>
