--- a/ios_tutorial.html
+++ b/ios_tutorial.html
@@ -32,15 +32,13 @@
 
 	<!--目录-->
 	<div id="menu">
-		<li class="parent"><span data-menuto="cont_1">一.所需工具</span></li>
-		<div class="divide_line"></div>
-		
-		<li class="parent"><span data-menuto="cont_2">二.详细步骤</span></li>
-			<li class="child"><span data-menuto="cont_2.1">1.获取游戏</span></li>
-			<li class="child"><span data-menuto="cont_2.2">2.替换Content</span></li>
-		<div class="divide_line"></div>
-		
-		<li class="parent"><span data-menuto="cont_3">三.生成安装包</span></li>
+		<li class="parent md_btn" data-menuto="cont_1">一.所需工具</span></li>
+				
+		<li class="parent md_btn" data-menuto="cont_2">二.详细步骤</span></li>
+			<li class="child md_btn" data-menuto="cont_2.1">1.获取游戏</span></li>
+			<li class="child md_btn" data-menuto="cont_2.2">2.替换Content</span></li>
+				
+		<li class="parent md_btn" data-menuto="cont_3">三.生成安装包</span></li>
 	</div>
 
 	<!--导航-->
