--- a/resources.html
+++ b/resources.html
@@ -32,16 +32,13 @@
 
 	<!--目录-->
 	<div id="menu">
-		<li class="parent"><span data-menuto="cont_1">一.游戏下载</span></li>
-		<div class="divide_line"></div>
-
-		<li class="parent"><span data-menuto="cont_2">二.安卓资源</span></li>
-		<div class="divide_line"></div>
-
-		<li class="parent"><span data-menuto="cont_3">三.IOS资源</span></li>
-		<div class="divide_line"></div>
-
-		<li class="parent"><span data-menuto="cont_4">四.Windows资源</span></li>
+		<li class="parent md_btn" data-menuto="cont_1">一.游戏下载</span></li>
+		
+		<li class="parent md_btn" data-menuto="cont_2">二.安卓资源</span></li>
+		
+		<li class="parent md_btn" data-menuto="cont_3">三.IOS资源</span></li>
+		
+		<li class="parent md_btn" data-menuto="cont_4">四.Windows资源</span></li>
 	</div>
 
 	<!--导航-->
