--- a/xml_tutorial.html
+++ b/xml_tutorial.html
@@ -45,13 +45,11 @@
 
 	<!--目录-->
 	<div id="menu">
-		<li class="parent"><span data-menuto="cont_1">一.标签</span></li>
-		<div class="divide_line"></div>
-		
-		<li class="parent"><span data-menuto="cont_2">二.识别码和继承码</span></li>
-		<div class="divide_line"></div>
-		
-		<li class="parent"><span data-menuto="cont_3">三.默认继承</span></li>
+		<li class="parent md_btn" data-menuto="cont_1">一.标签</span></li>
+				
+		<li class="parent md_btn" data-menuto="cont_2">二.识别码和继承码</span></li>
+				
+		<li class="parent md_btn" data-menuto="cont_3">三.默认继承</span></li>
 	</div>
 	
 	<!--上栏-->
