侧栏/菜单按钮由img改为background

--- a/nav_update.html
+++ b/nav_update.html
@@ -27,9 +27,7 @@
 	</script>
 	<!--顶栏 按钮-->
 	<div id="buttons">
-		<div id='nav_btn' class='md_btn'>
-			<img src='image/nav_btn.svg' />
-		</div>
+		<div id='nav_btn' class='md_btn'></div>
 	</div>
 
 	<!--导航-->
