--- a/android_tutorial.html
+++ b/android_tutorial.html
@@ -22,24 +22,18 @@
 	</script>
 	<!--顶栏 按钮-->
 	<div id="buttons">
-		<div id='menu_btn' class='md_btn'>
-			<img src='image/menu_btn.svg' />
-		</div>
-		<div id='nav_btn' class='md_btn'>
-			<img src='image/nav_btn.svg' />
-		</div>
+		<div id='menu_btn' class='md_btn'></div>
+		<div id='nav_btn' class='md_btn'></div>
 	</div>
 
 	<!--目录-->
 	<div id="menu">
-		<li class="parent md_btn" data-menuto="cont_1">一.所需工具</span></li>
-		
-		<li class="parent md_btn" data-menuto="cont_2">二.详细步骤</span></li>
-			<li class="child md_btn" data-menuto="cont_2.1">1.apk编辑器篇</span></li>
-			<li class="child md_btn" data-menuto="cont_2.2">2.mt管理器篇</span></li>
-			<li class="child md_btn" data-menuto="cont_2.3">3.以上工具无效</span></li>
-		
-		<li class="parent md_btn" data-menuto="cont_3">三.关于安卓核心破解</span></li>
+		<li class="parent md_btn" data-menuto="cont_1">一.所需工具</li>
+		<li class="parent md_btn" data-menuto="cont_2">二.详细步骤</li>
+			<li class="child md_btn" data-menuto="cont_2.1">1.apk编辑器篇</li>
+			<li class="child md_btn" data-menuto="cont_2.2">2.mt管理器篇</li>
+			<li class="child md_btn" data-menuto="cont_2.3">3.以上工具无效</li>
+		<li class="parent md_btn" data-menuto="cont_3">三.关于安卓核心破解</li>
 	</div>
 
 	<!--导航-->
