--- a/blocksdata_tutorial.html
+++ b/blocksdata_tutorial.html
@@ -22,23 +22,16 @@
 	</script>
 	<!--顶栏 按钮-->
 	<div id="buttons">
-		<div id='menu_btn' class='md_btn'>
-			<img src='image/menu_btn.svg' />
-		</div>
-		<div id='nav_btn' class='md_btn'>
-			<img src='image/nav_btn.svg' />
-		</div>
+		<div id='menu_btn' class='md_btn'></div>
+		<div id='nav_btn' class='md_btn'></div>
 	</div>
 
 	<!--目录-->
 	<div id="menu">
-		<li class="parent md_btn" data-menuto="cont_1">一.数据类型</span></li>
-		
-		<li class="parent md_btn" data-menuto="cont_2">二.内容详解</span></li>
-		
-		<li class="parent md_btn" data-menuto="cont_3">三.启发例子</span></li>
-		
-		<li class="parent md_btn" data-menuto="cont_appendix">附录</span></li>
+		<li class="parent md_btn" data-menuto="cont_1">一.数据类型</li>
+		<li class="parent md_btn" data-menuto="cont_2">二.内容详解</li>
+		<li class="parent md_btn" data-menuto="cont_3">三.启发例子</li>
+		<li class="parent md_btn" data-menuto="cont_appendix">附录</li>
 	</div>
 
 	<!--导航-->
