--- a/content_folder_tutorial.html
+++ b/content_folder_tutorial.html
@@ -22,21 +22,16 @@
 	</script>
 	<!--顶栏 按钮-->
 	<div id="buttons">
-		<div id='menu_btn' class='md_btn'>
-			<img src='image/menu_btn.svg' />
-		</div>
-		<div id='nav_btn' class='md_btn'>
-			<img src='image/nav_btn.svg' />
-		</div>
+		<div id='menu_btn' class='md_btn'></div>
+		<div id='nav_btn' class='md_btn'></div>
 	</div>
 
 	<!--目录-->
 	<div id="menu">
-		<li class="parent md_btn" data-menuto="cont_1">一.处理Content.pak</span></li>
-		
-		<li class="parent md_btn" data-menuto="cont_2">二.具体解析</span></li>
-			<li class="child md_btn" data-menuto="cont_2.1">1.根目录</span></li>
-			<li class="child md_btn" data-menuto="cont_2.2">2.文件夹</span></li>
+		<li class="parent md_btn" data-menuto="cont_1">一.处理Content.pak</li>
+		<li class="parent md_btn" data-menuto="cont_2">二.具体解析</li>
+			<li class="child md_btn" data-menuto="cont_2.1">1.根目录</li>
+			<li class="child md_btn" data-menuto="cont_2.2">2.文件夹</li>
 	</div>
 
 	<!--导航-->
