--- a/crafting_recipes_tutorial.html
+++ b/crafting_recipes_tutorial.html
@@ -24,21 +24,16 @@
 	</script>
 	<!--顶栏 按钮-->
 	<div id="buttons">
-		<div id='menu_btn' class='md_btn'>
-			<img src='image/menu_btn.svg' />
-		</div>
-		<div id='nav_btn' class='md_btn'>
-			<img src='image/nav_btn.svg' />
-		</div>
+		<div id='menu_btn' class='md_btn'></div>
+		<div id='nav_btn' class='md_btn'></div>
 	</div>
 
 	<!--目录-->
 	<div id="menu">
-		<li class="parent md_btn" data-menuto="cont_1">一.文件解析</span></li>
-				
-		<li class="parent md_btn" data-menuto="cont_2">二.一些例子</span></li>
-			<li class="child md_btn" data-menuto="cont_2.1">1.例一</span></li>
-			<li class="child md_btn" data-menuto="cont_2.2">2.例二</span></li>
+		<li class="parent md_btn" data-menuto="cont_1">一.文件解析</li>
+		<li class="parent md_btn" data-menuto="cont_2">二.一些例子</li>
+			<li class="child md_btn" data-menuto="cont_2.1">1.例一</li>
+			<li class="child md_btn" data-menuto="cont_2.2">2.例二</li>
 	</div>
 
 	<!--导航-->
