--- a/history.html
+++ b/history.html
@@ -33,20 +33,16 @@
 	</script>
 	<!--顶栏 按钮-->
 	<div id="buttons">
-		<div id='menu_btn' class='md_btn'>
-			<img src='image/menu_btn.svg' />
-		</div>
-		<div id='nav_btn' class='md_btn'>
-			<img src='image/nav_btn.svg' />
-		</div>
+		<div id='menu_btn' class='md_btn'></div>
+		<div id='nav_btn' class='md_btn'></div>
 	</div>
 
 	<!--目录-->
 	<div id="menu">
-		<li class="parent md_btn" data-menuto="cont_1">2013年</span></li>
-				<li class="parent md_btn" data-menuto="cont_2">2014年</span></li>
-				<li class="parent md_btn" data-menuto="cont_3">2015年</span></li>
-				<li><span id="reverse_chapter">倒序查看</span></li>
+		<li class="parent md_btn" data-menuto="cont_1">2013年</li>
+		<li class="parent md_btn" data-menuto="cont_2">2014年</li>
+		<li class="parent md_btn" data-menuto="cont_3">2015年</li>
+		<li id="reverse_chapter" class="md_btn">倒序查看</li>
 	</div>
 	<!--导航-->
 	<div id="nav" class="nav" data-open="1"></div>
