--- a/ios_tutorial.html
+++ b/ios_tutorial.html
@@ -22,23 +22,17 @@
 	</script>
 	<!--顶栏 按钮-->
 	<div id="buttons">
-		<div id='menu_btn' class='md_btn'>
-			<img src='image/menu_btn.svg' />
-		</div>
-		<div id='nav_btn' class='md_btn'>
-			<img src='image/nav_btn.svg' />
-		</div>
+		<div id='menu_btn' class='md_btn'></div>
+		<div id='nav_btn' class='md_btn'></div>
 	</div>
 
 	<!--目录-->
 	<div id="menu">
-		<li class="parent md_btn" data-menuto="cont_1">一.所需工具</span></li>
-				
-		<li class="parent md_btn" data-menuto="cont_2">二.详细步骤</span></li>
-			<li class="child md_btn" data-menuto="cont_2.1">1.获取游戏</span></li>
-			<li class="child md_btn" data-menuto="cont_2.2">2.替换Content</span></li>
-				
-		<li class="parent md_btn" data-menuto="cont_3">三.生成安装包</span></li>
+		<li class="parent md_btn" data-menuto="cont_1">一.所需工具</li>
+		<li class="parent md_btn" data-menuto="cont_2">二.详细步骤</li>
+			<li class="child md_btn" data-menuto="cont_2.1">1.获取游戏</li>
+			<li class="child md_btn" data-menuto="cont_2.2">2.替换Content</li>
+		<li class="parent md_btn" data-menuto="cont_3">三.生成安装包</li>
 	</div>
 
 	<!--导航-->
