--- a/logo.html
+++ b/logo.html
@@ -35,19 +35,14 @@
 	</script>
 	<!--顶栏 按钮-->
 	<div id="buttons">
-		<div id='menu_btn' class='md_btn'>
-			<img src='image/menu_btn.svg' />
-		</div>
-		<div id='nav_btn' class='md_btn'>
-			<img src='image/nav_btn.svg' />
-		</div>
+		<div id='menu_btn' class='md_btn'></div>
+		<div id='nav_btn' class='md_btn'></div>
 	</div>
 
 	<!--目录-->
 	<div id="menu">
-		<li class="parent md_btn" data-menuto="cont_1">一.现用logo</span></li>
-				
-		<li class="parent md_btn" data-menuto="cont_2">二.曾用logo</span></li>
+		<li class="parent md_btn" data-menuto="cont_1">一.现用logo</li>
+		<li class="parent md_btn" data-menuto="cont_2">二.曾用logo</li>
 	</div>
 
 	<!--导航-->
