--- a/resources.html
+++ b/resources.html
@@ -22,23 +22,16 @@
 	</script>
 	<!--顶栏 按钮-->
 	<div id="buttons">
-		<div id='menu_btn' class='md_btn'>
-			<img src='image/menu_btn.svg' />
-		</div>
-		<div id='nav_btn' class='md_btn'>
-			<img src='image/nav_btn.svg' />
-		</div>
+		<div id='menu_btn' class='md_btn'></div>
+		<div id='nav_btn' class='md_btn'></div>
 	</div>
 
 	<!--目录-->
 	<div id="menu">
-		<li class="parent md_btn" data-menuto="cont_1">一.游戏下载</span></li>
-		
-		<li class="parent md_btn" data-menuto="cont_2">二.安卓资源</span></li>
-		
-		<li class="parent md_btn" data-menuto="cont_3">三.IOS资源</span></li>
-		
-		<li class="parent md_btn" data-menuto="cont_4">四.Windows资源</span></li>
+		<li class="parent md_btn" data-menuto="cont_1">一.游戏下载</li>
+		<li class="parent md_btn" data-menuto="cont_2">二.安卓资源</li>
+		<li class="parent md_btn" data-menuto="cont_3">三.IOS资源</li>
+		<li class="parent md_btn" data-menuto="cont_4">四.Windows资源</li>
 	</div>
 
 	<!--导航-->
