--- a/source_code_tutorial.html
+++ b/source_code_tutorial.html
@@ -22,27 +22,18 @@
 	</script>
 	<!--顶栏 按钮-->
 	<div id="buttons">
-		<div id='menu_btn' class='md_btn'>
-			<img src='image/menu_btn.svg' />
-		</div>
-		<div id='nav_btn' class='md_btn'>
-			<img src='image/nav_btn.svg' />
-		</div>
+		<div id='menu_btn' class='md_btn'></div>
+		<div id='nav_btn' class='md_btn'></div>
 	</div>
 
 	<!--目录-->
 	<div id="menu">
-		<li class="parent md_btn"><span data-menuto="cont_1">一.所需工具</span></li>
-		
-		<li class="parent md_btn"><span data-menuto="cont_2">二.反编译</span></li>
-		
-		<li class="parent md_btn"><span data-menuto="cont_3">三.定位修改</span></li>
-		
-		<li class="parent md_btn"><span data-menuto="cont_4">四.IL语言</span></li>
-		
-		<li class="parent md_btn"><span data-menuto="cont_5">五.编译</span></li>
-		
-		<li class="parent md_btn"><span data-menuto="cont_appendix">附录.Android增加dll</span></li>
+		<li class="parent md_btn"><span data-menuto="cont_1">一.所需工具</li>
+		<li class="parent md_btn"><span data-menuto="cont_2">二.反编译</li>
+		<li class="parent md_btn"><span data-menuto="cont_3">三.定位修改</li>
+		<li class="parent md_btn"><span data-menuto="cont_4">四.IL语言</li>
+		<li class="parent md_btn"><span data-menuto="cont_5">五.编译</li>
+		<li class="parent md_btn"><span data-menuto="cont_appendix">附录.Android增加dll</li>
 	</div>
 
 	<!--导航-->
