--- a/xml_tutorial.html
+++ b/xml_tutorial.html
@@ -24,12 +24,8 @@
 	</script>
 	<!--顶栏 按钮-->
 	<div id="buttons">
-		<div id='menu_btn' class='md_btn'>
-			<img src='image/menu_btn.svg' />
-		</div>
-		<div id='nav_btn' class='md_btn'>
-			<img src='image/nav_btn.svg' />
-		</div>
+		<div id='menu_btn' class='md_btn'></div>
+		<div id='nav_btn' class='md_btn'></div>
 	</div>
 
 	<!--导航-->
@@ -45,11 +41,11 @@
 
 	<!--目录-->
 	<div id="menu">
-		<li class="parent md_btn" data-menuto="cont_1">一.标签</span></li>
+		<li class="parent md_btn" data-menuto="cont_1">一.标签</li>
 				
-		<li class="parent md_btn" data-menuto="cont_2">二.识别码和继承码</span></li>
+		<li class="parent md_btn" data-menuto="cont_2">二.识别码和继承码</li>
 				
-		<li class="parent md_btn" data-menuto="cont_3">三.默认继承</span></li>
+		<li class="parent md_btn" data-menuto="cont_3">三.默认继承</li>
 	</div>
 	
 	<!--上栏-->
