--- a/index.html
+++ b/index.html
@@ -19,28 +19,26 @@
 
 <body>
 <iframe id="error" src="error.html"></iframe>
-<div id="nav" class="nav" data-open="1"></div>
+<div id="divs_fixed">
+	<!--顶栏 按钮-->
+	<div id="buttons">
+		<div id="nav_btn" class='md_btn'></div>
+	</div>
+	<!--导航-->
+	<div id="nav" class="nav" data-open="1"></div>
+	<div id="nav_overlay"></div>
+	<!--顶栏-->
+	<div id="big_title_div" class="big">SMT导航</div>
+	<div id="top_box"></div>
+	<div id="top_box_top"></div>
+	<div id="top_box_strutting"></div>
+</div>
 <div id="cont_wrapper" style="display:none;">
 	<script>
 		// JS正常加载时隐藏error、显示cont_wrapper
 		$("#error").css("display", "none");
 		$("#cont_wrapper").css("display", "block");
 	</script>
-	<!--顶栏 按钮-->
-	<div id="buttons">
-		<div id="nav_btn" class='md_btn'>
-			<img src="image/nav_btn.svg" />
-		</div>
-	</div>
-
-	<!--导航-->
-	<div id="nav_overlay"></div>
-
-	<!--顶栏-->
-	<div id="big_title_div" class="big">SMT导航</div>
-	<div id="top_box"></div>
-	<div id="top_box_top"></div>
-	<div id="top_box_strutting"></div>
 
 	<!--内容栏-->
 	<div id="content_box">
