--- a/publication_example.html
+++ b/publication_example.html
@@ -14,27 +14,29 @@
 
 <body>
 <iframe id="error" src="error.html"></iframe>
-<div id="nav" class="nav" data-open="4"></div>
-<div id="cont_wrapper" style="display:none;">
-	<script>
-		// JS正常加载时隐藏error、显示cont_wrapper
-		$("#error").css("display", "none");
-		$("#cont_wrapper").css("display", "block");
-	</script>
+<div id="divs_fixed">
 	<!--顶栏 按钮-->
 	<div id="buttons">
 		<div id='nav_btn' class='md_btn'></div>
 	</div>
-
 	<!--导航-->
+	<div id="nav" class="nav" data-open="4"></div>
 	<div id="nav_overlay"></div>
-
 	<!--顶栏-->
 	<div id="big_title_div" class="big">发布范例</div>
 	<div id="last_update">——更新日期 2016年2月1日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
 	<div id="top_box_strutting"></div>
+</div>
+<div id="cont_wrapper" style="display:none;">
+	<script>
+		// JS正常加载时隐藏error、显示cont_wrapper
+		$("#error").css("display", "none");
+		$("#cont_wrapper").css("display", "block");
+	</script>
+
+
 
 	<!--上栏-->
 	<div id="upper_box">
