--- a/clothes_tutorial.html
+++ b/clothes_tutorial.html
@@ -16,27 +16,28 @@
 
 <body>
 <iframe id="error" src="error.html"></iframe>
-<div id="nav" class="nav" data-open="3"></div>
+<div id="divs_fixed" style="display:none;">
+	<!--顶栏 按钮-->
+	<div id="buttons">
+		<div id="nav_btn" class='md_btn'></div>
+	</div>
+	<!--导航-->
+	<div id="nav" class="nav" data-open="3"></div>
+	<div id="nav_overlay"></div>
+	<!--顶栏-->
+	<div id="big_title_div" class="big">Clothes解析</div>
+	<div id="last_update">——更新日期 2016年3月15日——</div>
+	<div id="top_box"></div>
+	<div id="top_box_top"></div>
+	<div id="top_box_strutting"></div>
+</div>
 <div id="cont_wrapper" style="display:none;">
 	<script>
 		// JS正常加载时隐藏error、显示cont_wrapper
 		$("#error").css("display", "none");
 		$("#cont_wrapper").css("display", "block");
+		$("#divs_fixed").css("display", "block");
 	</script>
-	<!--顶栏 按钮-->
-	<div id="buttons">
-		<div id='nav_btn' class='md_btn'></div>
-	</div>
-
-	<!--导航-->
-	<div id="nav_overlay"></div>
-
-	<!--顶栏-->
-	<div id="big_title_div" class="big">Clothes解析</div>
-	<div id="last_update">——更新日期 2016年1月25日——</div>
-	<div id="top_box"></div>
-	<div id="top_box_top"></div>
-	<div id="top_box_strutting"></div>
 
 	<!--上栏-->
 	<div id="upper_box">
