--- a/xml_tutorial.html
+++ b/xml_tutorial.html
@@ -16,37 +16,35 @@
 
 <body>
 <iframe id="error" src="error.html"></iframe>
-<div id="nav" class="nav" data-open="3"></div>
-<div id="cont_wrapper" style="display:none;">
-	<script>
-		// JS正常加载时隐藏error、显示cont_wrapper
-		$("#error").css("display", "none");
-		$("#cont_wrapper").css("display", "block");
-	</script>
+<div id="divs_fixed" style="display:none;">
 	<!--顶栏 按钮-->
 	<div id="buttons">
 		<div id='menu_btn' class='md_btn'></div>
 		<div id='nav_btn' class='md_btn'></div>
 	</div>
-
 	<!--导航-->
+	<div id="nav" class="nav" data-open="3"></div>
 	<div id="nav_overlay"></div>
-
 	<!--顶栏-->
 	<div id="big_title_div" class="big">XML基础知识</div>
-	<div id="last_update">——更新日期 2016年1月28日——</div>
+	<div id="last_update">——更新日期 2017年3月15日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
 	<div id="top_box_strutting"></div>
-
 	<!--目录-->
 	<div id="menu">
 		<li class="parent md_btn" data-menuto="cont_1">一.标签</li>
-
 		<li class="parent md_btn" data-menuto="cont_2">二.识别码和继承码</li>
-
 		<li class="parent md_btn" data-menuto="cont_3">三.默认继承</li>
 	</div>
+</div>
+<div id="cont_wrapper" style="display:none;">
+	<script>
+		// JS正常加载时隐藏error、显示cont_wrapper
+		$("#error").css("display", "none");
+		$("#cont_wrapper").css("display", "block");
+		$("#divs_fixed").css("display", "block");
+	</script>
 
 	<!--上栏-->
 	<div id="upper_box">
@@ -65,6 +63,7 @@
 	<div id="content_box">
 		<div class="chapter" id="cont_1">
 			<h1>第一节 标签</h1>
+			<span style="font-size:10pt; display:block; font-weight:bold;">——若此节无法理解可查看前言的<a href='http://runoob.com/xml/xml-tutorial.html' target='_blank'>更多内容</a></span>
 			<div class="section">
 				<div class="content">标记语言由标签包裹内容，包裹形式有以下两种：
 					<h2>(1)&lt;abc&gt;xxx&lt;/abc&gt;</h2>
