--- a/windows_tutorial.html
+++ b/windows_tutorial.html
@@ -13,15 +13,7 @@
 </head>
 
 <body>
-<div id="error" style="width:100%; height: 100%; text-align:center;">
-	<div style="padding:15%; display:inline-block; text-align:left;">
-		<span style="color:#0aa9fb; font-weight:bold; font-size:40px;">网页无法正常显示，请尝试：</span>
-		<ul style="margin: 30px 0 0 50px; font-size: 22px;">
-			<li style="margin-top: 10px;">IE用户请点击下方<span style="color:#F60;">“允许阻止的内容”</span>按钮</li>
-			<li style="margin-top: 10px;">更换其他浏览器</li>
-		</ul>
-	</div>
-</div>
+<iframe id="error" src="error.html"></iframe>
 <div id="divs_fixed" style="display:none;">
 	<!--顶栏 按钮-->
 	<div id="buttons">
