添加两个小工具资源
GUID验证器和Blocksdata编辑器

--- a/blocksdata_tutorial.html
+++ b/blocksdata_tutorial.html
@@ -25,7 +25,7 @@
 	<div id="nav_overlay"></div>
 	<!--顶栏-->
 	<div id="big_title_div" class="big">Blocksdata教程</div>
-	<div id="last_update">——更新日期 2017年3月15日——</div>
+	<div id="last_update">——更新日期 2017年4月4日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
 	<div id="top_box_strutting"></div>
@@ -108,6 +108,9 @@
 		<div class="chapter" id="cont_2">
 			<h1>第二节 内容详解</h1>
 			<span style="font-size:10pt; display:block; font-weight:bold;">——每一行第n个分号之后所代表的内容详解</span>
+			<div class="content">
+				可使用<a href="resources.html#cont_5.1">Blocksdata编辑器</a>方便地对下列属性进行编辑
+			</div>
 			<div class="content" style="overflow-x:auto;">
 				<table style="font-size:14px;line-height:20px;">
 					<tr style="font-weight:bold; text-align:center;">
