--- a/resources.html
+++ b/resources.html
@@ -35,6 +35,7 @@
 		<li class="parent md_btn" data-menuto="cont_2">二.安卓资源</li>
 		<li class="parent md_btn" data-menuto="cont_3">三.IOS资源</li>
 		<li class="parent md_btn" data-menuto="cont_4">四.Windows资源</li>
+		<li class="parent md_btn" data-menuto="cont_5">五.其他资源</li>
 	</div>
 </div>
 <div id="cont_wrapper" style="display:none;">
@@ -339,6 +340,16 @@
 
 		<div class="chapter" id="cont_5">
 			<h1>第五节 其他资源</h1>
+				<div class="content"  id="cont_5.1">
+					Blocksdata编辑器<br />
+					<a href="https://xiaofengdizhu.github.io/SurvivalcraftBlocksdataEditor/" target="_blank">在线版</a>
+					<a href="https://github.com/XiaofengdiZhu/SurvivalcraftBlocksdataEditor/archive/master.zip" target="_blank">离线版</a>
+				</div>
+				<div class="content"  id="cont_5.2">
+					GUID验证器<br />
+					<a href="https://xiaofengdizhu.github.io/guid_duplicate_checking/" target="_blank">在线版</a>
+					<a href="https://github.com/XiaofengdiZhu/guid_duplicate_checking/archive/master.zip" target="_blank">离线版</a>
+				</div>
 				<div class="content">
 					<a href="http://pan.baidu.com/share/link?shareid=170360941&uk=2788149454" target="_blank">表格化1.26Blocksdata</a><br />
 					更直观地查看和比较方块属性
