--- a/xml_tutorial.html
+++ b/xml_tutorial.html
@@ -27,7 +27,7 @@
 	<div id="nav_overlay"></div>
 	<!--顶栏-->
 	<div id="big_title_div" class="big">XML基础知识</div>
-	<div id="last_update">——更新日期 2017年3月15日——</div>
+	<div id="last_update">——更新日期 2017年4月4日——</div>
 	<div id="top_box"></div>
 	<div id="top_box_top"></div>
 	<div id="top_box_strutting"></div>
@@ -122,7 +122,8 @@
 				<h2>识别码</h2>
 				<div class="content">
 					Database.xml中大部分元素都有Guid这个属性，它的全名是全局唯一标识符，这里为了方便称呼称为识别码；作用是使一个元素具有唯一性，能被被识别，因此不可重复。<br />
-					它的格式为“xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx”，其中每个 x 是 0-9 或 a-f 范围内的一个十六进制数。
+					它的格式为“xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx”，其中每个 x 是 0-9 或 a-f 范围内的一个十六进制数。<br />
+					如果在载入游戏时出现“AN ITEM WITH THE SAME KEY HAS ALREADY BEEN ADDED”说明出现了重复的识别码，可以使用<a href="resources.html#cont_5.2">GUID验证器</a>来查重。
 				</div>
 			</div>
 			<div class="section">
