默认材质位置更详细说明

--- a/blocksdata_tutorial.html
+++ b/blocksdata_tutorial.html
@@ -620,7 +620,7 @@
 						<td>uint</td>
 						<td>Default Texture Slot</td>
 						<td>默认材质位置</td>
-						<td>材质图上从左向右，从上向下排列顺序，第一个（草地顶面）是0，第二个（花岗岩）是1</td>
+						<td>材质图上从左向右，从上向下排列顺序，第一个（草地顶面）是0，第二个（花岗岩）是1，第x横行第y纵列对应数字是x-1+(y-1)*16</td>
 					</tr>
 					<tr>
 						<td>72</td>
