--- a/source_code_tutorial.html
+++ b/source_code_tutorial.html
@@ -55,7 +55,7 @@
 				<li>此教程除附录部分由百度贴吧-<a href="http://tieba.baidu.com/home/main/?un=%E9%94%80%E9%94%8B%E9%95%9D%E9%93%B8&ie=utf-8" target="_blank">销锋镝铸</a> 编写，附录部分由百度贴吧-<a href="https://tieba.baidu.com/home/main?un=lixue_jiu&ie=utf-8" target="_blank">lixue_jiu</a>编写</li>
 				<li>源代码（也称源程序）是指未编译的按照一定的程序设计语言规范书写的文本文件，是一系列人类可读的计算机语言指令。 源代码的最终目的是将人类可读的文本翻译成为计算机可以执行的二进制指令，这种过程叫做编译，通过编译器完成。</li>
 				<li>在游戏安装包中我们不能直接获取源代码，但可以通过“反编译”的方式将安装包或安装目录中的dll、exe可执行文件转换为汇编程序（使用一种低级计算机语言编写的程序），编辑后再编译回dll、exe文件，替换回之前的位置，即可产生效果。因此，这里修改的实际上是汇编程序，而不是源程序，所以标题中的“源代码”是打引号的</li>
-				<li>此教程主要以反编译为IL语言为例，修改的文件为Survivalcraft.exe（或dll），需要一定的编程基础</li>
+				<li>此教程主要以反编译为IL语言为例，修改的文件为Survivalcraft.exe（或dll），需要一定的编程基础，同时对英语要求较高，接下来和源代码相关的教程将减少中文翻译，请谅解</li>
 			</ul>
 		</div>
 	</div>
